// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CSOStatus Account Exists 1`] = `
<div>
  <p>
    Account exists! Proceed
  </p>
  <div>
    <button
      className="normal-white btn"
      onClick={[Function]}
      type="button"
    >
      Cancel and return to client
    </button>
  </div>
</div>
`;

exports[`Storyshots CSOStatus Account Exists Mobile 1`] = `
<div>
  <p>
    Account exists! Proceed
  </p>
  <div>
    <button
      className="normal-white btn"
      onClick={[Function]}
      type="button"
    >
      Cancel and return to client
    </button>
  </div>
</div>
`;

exports[`Storyshots CSOStatus No Account Exists 1`] = `
<div>
  <p>
    Account does not exist, form will be here
  </p>
  <div>
    <button
      className="normal-white btn"
      onClick={[Function]}
      type="button"
    >
      Cancel and return to client
    </button>
  </div>
</div>
`;

exports[`Storyshots CSOStatus No Account Exists Mobile 1`] = `
<div>
  <p>
    Account does not exist, form will be here
  </p>
  <div>
    <button
      className="normal-white btn"
      onClick={[Function]}
      type="button"
    >
      Cancel and return to client
    </button>
  </div>
</div>
`;
